Added model training features
